april tags recognization and pose estimation (UNTESTED)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,14 +18,13 @@
     {
       "name": "WPIlibUnitTests",
       "workingDirectory": "${workspaceFolder}/build/jni/release",
-      "vmargs": [ "-Djava.library.path=${workspaceFolder}/build/jni/release" ],
+      "vmargs": ["-Djava.library.path=${workspaceFolder}/build/jni/release"],
       "env": {
-        "LD_LIBRARY_PATH": "${workspaceFolder}/build/jni/release" ,
+        "LD_LIBRARY_PATH": "${workspaceFolder}/build/jni/release",
         "DYLD_LIBRARY_PATH": "${workspaceFolder}/build/jni/release"
       }
-    },
+    }
   ],
-  
   "java.test.defaultConfig": "WPIlibUnitTests",
   "[java]": {
     "spotlessGradle.format.enable": true,
@@ -34,5 +33,6 @@
       "source.fixAll.spotlessGradle": true
     },
     "editor.defaultFormatter": "richardwillis.vscode-spotless-gradle"
-  }
+  },
+  "wpilib.autoStartRioLog": false
 }
