--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,7 +30,7 @@
     "spotlessGradle.format.enable": true,
     "spotlessGradle.diagnostics.enable": true,
     "editor.codeActionsOnSave": {
-      "source.fixAll.spotlessGradle": false
+      "source.fixAll.spotlessGradle": true
     },
     "editor.defaultFormatter": "richardwillis.vscode-spotless-gradle"
   },
