LEDs re-enabled but limelight tuning messed up so its wack

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,7 +32,7 @@
     "editor.codeActionsOnSave": {
       "source.fixAll.spotlessGradle": true
     },
-    "editor.defaultFormatter": "richardwillis.vscode-spotless-gradle"
+    "editor.defaultFormatter": "redhat.java"
   },
   "wpilib.autoStartRioLog": false,
   "java.compile.nullAnalysis.mode": "automatic"
